SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    5 Dec 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131205
Tag Summary: Fix a bug in the creation of pop2.input_data_list -- there is one
             binary file in the inputdata repository that requires a .hdr file
             and now the hdr file is pulled from the repository (when needed)
             by the check_input_data_script

Files Modified:
M       bld/build-namelist
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    2 Dec 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131202
Tag Summary: Update default values for ecosys

Files Modified:
M       source/ecosys_parms.F90
M       bld/namelist_files/namelist_defaults_pop2.xml
===============================================================================
Tag Creator: mlevy
Developers:  santos
Tag Date:    26 Nov 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131126
Tag Summary: Getting POP ready for the xlf2003 compiler

Files Modified:
M       source/hmix_del2.F90
M       source/hmix_del4.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    21 Nov 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131121a
Tag Summary: Bugfix in ecosys module (see bugzilla #1866): Fe input was
             over-writing the atmospheric Fe flux instead of being added.

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  njn01
Tag Date:    21 Nov 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131121
Tag Summary: Splitting the option to use reduced Arctic diffusivity out of the
             near-interial wave mixing (use the larctic_bckgrnd_vdc namelist
             variable, default is .false.)
