@@ -2,6 +2,17 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  santos
+Tag Date:    20 Dec 2013
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131220
+Tag Summary: Another bugfix related to updated compilers
+
+Files Modified:
+M       source/cfc_mod.F90
+M       source/cfc11_mod.F90
+M       source/tavg.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  mlevy
 Tag Date:    5 Dec 2013
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131205
